tests/negative/option/option_invalid_access.tx
// EXPECTED: COMPILE_ERROR
// Description: Test accessing member of Option without narrowing.

type User = { name: string };

function main() {
    let u: Option<User> = None;
    print(u.name); // Error: Cannot access 'name' on Option<User> (might be None)
}
